<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_Records"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_myRecord" />
        <item
            android:id="@+id/world_Records"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_worldRecord" />
    </group>

    <item android:title="@string/menu_titleGame">
        <menu>
            <item
                android:id="@+id/game_1"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/game_1" />
            <item
                android:id="@+id/game_2"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/game_2" />
            <item
                android:id="@+id/game_3"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/game_3" />
            <item
                android:id="@+id/game_4"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/game_4" />
        </menu>
    </item>

    <item android:title="@string/menu_titleSettings">
        <menu>
            <item
                android:id="@+id/settings_login"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings_login" />
            <item
                android:id="@+id/settings_account"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/settings_account" />
        </menu>
    </item>

</menu>
